Feature/upgrade 435 merge fixes mmrouet (#31)
*  Fixed 435 tag merge conflicts
*  Fixed Azure FileSystem (commit a8c318f needs to be contributed upstream)
*  Completely re-implemented hadoop catalog and table operations classes
-------
Co-authored-by: cccs-tom <59839056+cccs-tom@users.noreply.github.com>
Co-authored-by: cccs-nik <68961854+cccs-nik@users.noreply.github.com>